# RecipeLLM

./: config.json  dataloader.py  main.py  pyproject.toml  train.py  training_config.py
notebooks/: explore_data.ipynb
scripts/: build_dataset.py  convert_htmls_to_parquet.py  data_generation_config.py  download_htmls.py  generate_training_dataset.py  merge_htmls_with_dataset.py  prepare_dataset.py  scrape_htmls.py  scrapy_download.py
src/preprocessing/: convert_htmls_to_parquet.py  data_generation_config.py  generate_training_dataset.py  merge_htmls_with_dataset.py  migrate_html_cache.py  nlp.py  prepare_dataset.py
src/scraping/: scrape_htmls.py  tensorboard_stats.py
src/training/: train.py
